fix top containers alignment

--- a/embr-app/src/App.css
+++ b/embr-app/src/App.css
@@ -39,10 +39,8 @@
   background-color: #fff; /* White background */
   border-radius: 10px; /* Rounded corners */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
-  /* padding: 20px;
+  padding: 20px;
   margin-bottom: 20px;
-  margin-left: 20px; */
-
 }
 
 .flir-container{
